# sirius

./: .gitignore  Cargo.toml  README.md  pre-commit
docs/: demo.html  index.html  roadmap.html  standard_lib.html  tsconfig.json  type_system.html
docs/css/: main.css
docs/demo/: LICENSE  index.html  tsconfig.json
docs/examples/: externals.srs  factorial.srs  functional.srs  matmul.srs  pythag.srs  stdlib.srs  tuple_eq.srs  tuple_map.srs
docs/js/: README.md  block_constraints.js  code_lines.js  demo.js  demo_programs.js  docs.js  editor.js  hover_text.js  interpreter_worker.js  output_area.js  package.json  parser_worker.js  sirius.d.ts  sirius.js  sirius_bg.wasm  sirius_bg.wasm.d.ts  tooltip.js  types.js  worker.js
docs/strip_html_code_snippet/: code.srs  new_code.srs  strip.py
docs/ts/: action_history.ts  block_constraints.ts  code_lines.ts  demo.ts  demo_programs.ts  docs.ts  editor.ts  interpreter_worker.ts  output_area.ts  parser_worker.ts  tooltip.ts  types.ts
src/: error.rs  flow.rs  grammar.lalrpop  interpreter.rs  lexer.rs  lib.rs  parser.rs  scope.rs  stack.rs  typechecker.rs  wasm.rs
src/interpreter/: mod.rs  number_coersion.rs  stdlib_impl.rs  value.rs
src/parser/: match_brackets.rs  mod.rs  parse_expression.rs  parse_type_expression.rs
src/solver/: field.rs  interval.rs  mod.rs  poly.rs  rational.rs  system.rs  univariate.rs
src/stdlib/: math.rs  mod.rs
src/typechecker/: add_preconditions.rs  annotations.rs  arithmetic.rs  concreteness_check.rs  constraint_check.rs  eq_classes.rs  equality.rs  flow.rs  ind.rs  (+8 more)
tests/: integration.rs
(+29 files in other folders)
