[package]
name = "sirius"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
lalrpop-util = { version = "0.19.9" }
wasm-bindgen = "0.2.74"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
z3 = {version="0.11.2", features = ["static-link-z3"]}

[build-dependencies]

lalrpop = { version = "0.19.9", default-features = false }