[package]
name = "sirius"
version = "0.1.0"
edition = "2021"

[package.metadata]
wasm-opt = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
lalrpop-util = { version = "0.19.9" }
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"

[build-dependencies]

lalrpop = { version = "0.19.9", default-features = false }